subprojects/pclc/test/errors/nested_redefinition.pcl
// RUN: not pclc %s

b = func (x, y, z) : bar {
  b = func () : bar {
    return 3;
  }

  b();
}

print b(1, 2, 3);
